--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,8 +21,8 @@ jobs:
 
       - if: steps.build.outputs.skip != 'true'
         run: |
-          sha256sum geoip.db > dist/geoip.db.sha256sum
-          sha256sum geoip-cn.db > dist/geoip-cn.db.sha256sum
+          sha256sum geoip.db > geoip.db.sha256sum
+          sha256sum geoip-cn.db > geoip-cn.db.sha256sum
 
       - if: steps.build.outputs.skip != 'true'
         uses: softprops/action-gh-release@v1
