--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,34 +3,39 @@ name: Release
 on:
   workflow_dispatch:
   schedule:
-    - cron: "30 0 * * *"
+    - cron: "0 16 * * *"
 
 jobs:
-  build:
-    name: Build
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-go@v4
+      - name: Setup Go
+        uses: actions/setup-go@v4
         with:
           go-version: 'stable'
 
-      - id: build
+      - name: Build
+        id: build
         run: go run -v .
 
-      - if: steps.build.outputs.skip != 'true'
+      - name: Checksum
+        if: steps.build.outputs.skip != 'true'
         run: |
           sha256sum geoip.db > geoip.db.sha256sum
           sha256sum geoip-cn.db > geoip-cn.db.sha256sum
 
-      - if: steps.build.outputs.skip != 'true'
+      - name: Release
+        if: steps.build.outputs.skip != 'true'
         uses: softprops/action-gh-release@v1
         with:
           name: ${{ steps.build.outputs.tag }}
           tag_name: ${{ steps.build.outputs.tag }}
           files: |
             geoip.db
-            geoip-cn.db
             geoip.db.sha256sum
+            geoip-cn.db
             geoip-cn.db.sha256sum
